fix: Fixed alignment, wrong fonts and responsive issues in press page

--- a/src/pages/press/press-room/press-header.module.scss
+++ b/src/pages/press/press-room/press-header.module.scss
@@ -121,6 +121,7 @@
     font-weight: 700;
     font-size: 36px;
     margin: 10px 0 16px;
+    text-align: center;
   }
 
   .press_header .container p {
@@ -188,13 +189,13 @@
     font-weight: 700;
     font-size: 20px;
     margin: 8px 0;
-    text-align: left;
+    text-align: center;
   }
 
   .press_header .container p {
     font-weight: 500;
     font-size: 12px;
-    text-align: left;
+    text-align: center;
     color: #737479;
     margin-bottom: 16px;
   }
